[gd_scene load_steps=3 format=3 uid="uid://cy7gj50lfafvs"]

[ext_resource type="Script" uid="uid://pbdicpwel4em" path="res://hud.gd" id="1_oo0fn"]
[ext_resource type="FontFile" uid="uid://5j2ek2uxqjqv" path="res://art/Pixelpurl-0vBPP.ttf" id="2_5ysmq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="PowerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 53.0
offset_right = 100.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 100
text = "Power"

[node name="PowerNumberLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 126.0
offset_right = 20.0
offset_bottom = 149.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -230.0
offset_right = 263.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 150
text = "Game over"

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5ysmq")
theme_override_font_sizes/font_size = 64
text = "Restart"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_pressed"]
